@@ -37,6 +37,7 @@
 namespace scheme {
 
     bool fileExistsP(const ucs4string& file);
+    Object getStringNEx(int argc, const Object* argv);
     Object faslWriteEx(int argc, const Object* argv);
     Object openInputFileEx(int argc, const Object* argv);
     Object closePortEx(int argc, const Object* argv);
