@@ -1,3 +1,7 @@
+2008-10-28  higepon  <higepon@users.sourceforge.jp>
+
+        * PortProcedures.cpp (getStringNEx): Added get-string-n.
+
 2008-10-27  higepon  <higepon@users.sourceforge.jp>
 
         * compiler.scm (cput-shift!): Cut off (SHIFT n m) instruction when m == 0.
